# LearnEngine

./: CMakeLists.txt  README.md
app/: main.cpp
core/include/: FrameBuffer.h  Renderer.h  Shader.h
core/src/: FrameBuffer.cpp  Renderer.cpp  Shader.cpp
include/: Camera.h  FrameBuffer.h  MathTypes.h  Model.h  Renderer.h
mathtool/include/: MathType.h
mathtool/src/: MathType.cpp
platform/include/: DisplayWin32.h
platform/src/: DisplayWin32.cpp
scene/include/: Camera.h  Light.h  Material.h  Model.h  Scene.h  Texture.h  Transform.h
scene/src/: Camera.cpp  Model.cpp
src/: Framebuffer.cpp  MathTypes.cpp  Model.cpp  Renderer.cpp  main.cpp
